--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,15 +6,19 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "basicsr>=1.4.2",
     "customtkinter>=5.2.2",
+    "gfpgan>=1.3.8",
     "httpx>=0.28.1",
-    "numpy>=2.3.4",
+    "mediapipe>=0.10.14",
+    "numpy<2",
     "onnxruntime-gpu>=1.23.0",
     "opencv-python>=4.11.0.86",
     "pillow>=12.0.0",
-    "pydantic>=2.12.3",
     "pyside6>=6.10.0",
-    "rembg>=2.0.67",
+    "torch==2.0.1",
+    "torchaudio==2.0.2",
+    "torchvision==0.15.2",
 ]
 
 [dependency-groups]
