adjusted pipeline details

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "mediapipe>=0.10.14",
     "numpy<2",
     "onnxruntime-gpu>=1.23.0",
+    "opencv-contrib-python>=4.11.0.86",
     "opencv-python>=4.11.0.86",
     "pillow>=12.0.0",
     "pyside6>=6.10.0",
